2008-05-19 18:49 +0200  Vladimir Marek  <Vladimir.Marek@Sun.COM>  (8ac4b70221ee)

	* Makefile.am: Unbreak build with included gettext by explicitly
	removing libs for mutt_md5

2008-05-19 11:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (85654735d27e)

	* UPDATING: Mention mime_lookup change in UPDATING

2008-05-19 10:59 +0200  Paul Walker  <paul@black-sun.demon.co.uk>  (d3fd07d0016c)

	* init.c: Use %p instead of %x to debug-print pointers (fixes warnings
	on 64bit platforms)

2008-05-19 10:56 +0200  Rocco Rutte  <pdmef@gmx.net>  (771276a3bace)

	* Makefile.am: hcversion.h depends on new mutt_md5 tool

2008-05-18 12:42 -0700  Roland Rosenfeld  <roland@spinnaker.de>  (4ef0fc2f8378)

	* po/de.po: Updated German translation

2008-05-17 19:31 -0700  Andreas  <Andreas Jobs>  (aaeee8f868c4)

	* ChangeLog, crypt-gpgme.c: Fix GPGME S/MIME micalg generation, broken
	in [e6f958b093b6]. Closes #2994.

2008-05-17 18:34 -0700  Brendan Cully  <brendan@kublai.com>  (f9545d5ec15f)

	* doc/Muttrc.head: Add 'mime_lookup application/octet-stream' to the
	distributed Muttrc. Closes #2984.

	* .hgignore, Makefile.am, configure.ac, hcachever.sh.in,
	md5.c: Build local md5 tool for hcachever.sh. Closes #3025.

2008-05-17 12:39 -0700  Brendan Cully  <brendan@kublai.com>  (692b7c063bf1)

	* .hgsigs: mutt-1.5.18 signed

	* .hgtags: Added tag mutt-1-5-18-rel for changeset ff9e4d0464b1

	* ChangeLog, VERSION, po/bg.po, po/ca.po, po/cs.po, po/da.po,
	po/de.po, po/el.po, po/eo.po, po/es.po, po/et.po, po/eu.po,
	po/fr.po, po/ga.po, po/gl.po, po/hu.po, po/id.po, po/it.po,
	po/ja.po, po/ko.po, po/lt.po, po/nl.po, po/pl.po, po/pt_BR.po,
	po/ru.po, po/sk.po, po/sv.po, po/tr.po, po/uk.po, po/zh_CN.po,
	po/zh_TW.po: automatic post-release commit for mutt-1.5.18

	* UPDATING: Update UPDATING.

	* imap/browse.c: Use context to get IMAP new message count in mailbox
	browser if possible.

2008-05-17 11:08 -0700  Rocco Rutte  <pdmef@gmx.net>  (b341d157ae72)
